--- a/Modelo/desafio01/style.css
+++ b/Modelo/desafio01/style.css
@@ -1,5 +1,5 @@
-body {
-background: rgb(92, 92, 248);
+body{
+background: rgb(114, 114, 247);
 font: normal 15pt Arial;
 }
 
@@ -9,16 +9,21 @@ text-align: center;
 }
 
 section {
-background: white;
-border-radius: 10px;
-padding: 15px;
-width: 600px;
-margin: auto;
-box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.363);
+    background: white;
+    border-radius: 10px;
+    padding: 15px;
+    width: 600px;
+    margin: auto;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.37);
+}
+
+div {
+    text-align: center;
+    padding: 8px;
 }
 
 footer {
-    color: white;
-    text-align: center;
-    font-style: italic;
+color: white;
+text-align: center;
+font-style: italic;
 }
